--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Bloom Startup</title>
+	<title> Bloom Startup!</title>
 
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
